--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,10 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-
-    <script type="module" src="./main.js"></script>
+<ul>
+  <li><a href="./1-timer.html">Timer</a></li>
+  <li><a href="./2-snackbar.html">Snackbar</a></li>
+</ul>
+   
   </body>
 </html>
