--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <p><a href="./index.html">Go back</a></p>
-    
+
     <form class="form">
         <label>
             Delay (ms)
@@ -32,7 +32,7 @@
             </label>
         </fieldset>
     
-        <button type="submit">Create notification</button>
+        <button class="start-btn" type="submit">Create notification</button>
     </form>
 
     <script src="./js/2-snackbar.js" type="module"></script>
