--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -32,7 +32,7 @@
             </label>
         </fieldset>
     
-        <button class="start-btn" type="submit">Create notification</button>
+        <button class="submit-btn" type="submit">Create notification</button>
     </form>
 
     <script src="./js/2-snackbar.js" type="module"></script>
