--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -15,9 +15,9 @@
     <p><a href="./index.html">Go back</a></p>
 
     <form class="form">
-        <label>
+        <label class="delay-label">
             Delay (ms)
-            <input type="number" name="delay" required />
+            <input class="delay-label-input" type="number" name="delay" required />
         </label>
     
         <fieldset>
